examples/test/testpolicy8438.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8438
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key8: value17
      key11: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value8
          key47: value15
      podSelector:
        matchLabels:
          key35: value12
          key34: value36
          key19: value21
